# amplifier-app-opencode

./: .gitignore  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
src/amplifier_app_opencode/: __init__.py  __main__.py  cli.py
tests/: test_host_config.py
