[project]
name = "amplifier-app-opencode"
version = "0.1.0"
description = "Launch the opencode TUI with auto-discovered amplifier-agent models — checks/starts the chat-completions server, queries /v1/models, writes opencode.json, exec's opencode."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amplifier" }]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
]

[project.scripts]
amplifier-opencode = "amplifier_app_opencode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_opencode"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
